--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "resume",
+  "homepage": "https://omensah.github.io/resume",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,9 +10,12 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "1.0.6"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
