--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resume",
-  "homepage": "https://omensah.github.io/resume",
+  "homepage": "https://OliverMensahDev.github.io/resume",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
